# pr_xatlas

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pragma-linux-ci.yml
include/: pr_xatlas.hpp
src/: pr_xatlas.cpp
